@@ -20,6 +20,8 @@ from Products.ResourceRegistries.interfaces import ICookedFile
 from Products.ResourceRegistries.tests.RegistryTestCase import RegistryTestCase
 from Products.ResourceRegistries.tests.RegistryTestCase import FunctionalRegistryTestCase
 
+ONE_SECOND = 1.0 / (60 * 60 * 24)
+
 
 class TestImplementation(RegistryTestCase):
 
@@ -953,11 +955,14 @@ class TestDebugMode(FunctionalRegistryTestCase):
         now = DateTime()
         days = 7
         soon = now + days
+        soon2 = soon + ONE_SECOND
         self.tool.setDebugMode(True)
         # Publish in debug mode
         response = self.publish(self.toolpath+'/ham')
         self.assertNotEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(now.timeTime()))
+        self.assertNotEqual(response.getHeader('Expires'), rfc1123_date(soon2.timeTime()))
+        self.assertGreaterEqual(response.getHeader('Expires'), rfc1123_date(now.timeTime()))
+        self.assertLessEqual(response.getHeader('Expires'), rfc1123_date(DateTime().timeTime()))
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=0')
 
 
@@ -1078,8 +1083,10 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         now = DateTime()
         days = 7
         soon = now + days
+        soon2 = soon + ONE_SECOND
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertGreaterEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertLessEqual(response.getHeader('Expires'), rfc1123_date(soon2.timeTime()))
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
         # Publish again
@@ -1088,7 +1095,8 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         days = 7
         soon = now + days
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertGreaterEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertLessEqual(response.getHeader('Expires'), rfc1123_date(soon2.timeTime()))
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
     def testCachingHeadersFromSkin(self):
@@ -1100,8 +1108,10 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         now = DateTime()
         days = 7
         soon = now + days
+        soon2 = soon + ONE_SECOND
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertGreaterEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertLessEqual(response.getHeader('Expires'), rfc1123_date(soon2.timeTime()))
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
         # Publish again
@@ -1109,8 +1119,10 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         now = DateTime()
         days = 7
         soon = now + days
+        soon2 = soon + ONE_SECOND
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertGreaterEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertLessEqual(response.getHeader('Expires'), rfc1123_date(soon2.timeTime()))
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
     def testCachingHeadersFromToolWithRAMCache(self):
@@ -1123,8 +1135,10 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         now = DateTime()
         days = 7
         soon = now + days
+        soon2 = soon + ONE_SECOND
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertGreaterEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertLessEqual(response.getHeader('Expires'), rfc1123_date(soon2.timeTime()))
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
         # Publish again
@@ -1132,8 +1146,10 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         now = DateTime()
         days = 7
         soon = now + days
+        soon2 = soon + ONE_SECOND
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertGreaterEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertLessEqual(response.getHeader('Expires'), rfc1123_date(soon2.timeTime()))
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
     def testCachingHeadersFromSkinWithRAMCache(self):
@@ -1148,8 +1164,10 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         now = DateTime()
         days = 7
         soon = now + days
+        soon2 = soon + ONE_SECOND
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertGreaterEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertLessEqual(response.getHeader('Expires'), rfc1123_date(soon2.timeTime()))
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
         # Publish again
@@ -1157,8 +1175,10 @@ class TestCachingHeaders(FunctionalRegistryTestCase):
         now = DateTime()
         days = 7
         soon = now + days
+        soon2 = soon + ONE_SECOND
         self.assertEqual(response.getStatus(), 200)
-        self.assertEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertGreaterEqual(response.getHeader('Expires'), rfc1123_date(soon.timeTime()))
+        self.assertLessEqual(response.getHeader('Expires'), rfc1123_date(soon2.timeTime()))
         self.assertEqual(response.getHeader('Cache-Control'), 'max-age=%d' % int(days*24*3600))
 
 class TestBundling(RegistryTestCase):
